[package]
name = "the-room"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
