[package]
name = "the-room"
version = "0.1.0"
edition = "2021"

[dependencies]
confik = "0.12.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
actix-cors = "0.7.0"

